possibly fix the drop shadow overflow issue

--- a/screen.css
+++ b/screen.css
@@ -53,7 +53,6 @@ h2 {
   font-size: 20px;
   line-height: 21px;
   font-weight: 600;
-  padding-left: 21px;
 }
 
 h3 {
@@ -109,7 +108,6 @@ img {
   border: 0;
   width: 100%;
   height: 315px; /* temporary until there are real images */
-  margin: 0 0 21px 21px; /* same */
 }
 
 #bg {
@@ -134,7 +132,6 @@ img {
 
 .project {
   margin-bottom: 168px;
-  overflow: hidden;
 }
 
 .content {
